hard-gists/6695625/run.log
=== Docker Run Log for 6695625 ===
Started at: Mi 29. Okt 16:42:04 CET 2025

[2025-10-29 16:42:05] START: Running container for 6695625
[2025-10-29 16:42:05] SUCCESS: Container 8e8c5a5c0b6279f3dce4d0e248205c1c2617620d963de0b3f1dd2e7799b43f58 started for 6695625
=== Container logs for 6695625 ===
  File "/snippet.py", line 179
    print 'SetWinEventHook failed'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6695625 ===
[2025-10-29 16:42:07] INFO: Container 8e8c5a5c0b6279f3dce4d0e248205c1c2617620d963de0b3f1dd2e7799b43f58 has stopped
